@@ -1156,49 +1156,9 @@ void init_attack_vol_table(void)
 
 FLOAT_T sc_eg_decay_table[128] = 
 {
-    300.000000, 274.420300, 251.021671, 229.618141, 210.039597, 192.130431, 175.748302, 160.763006, 
-    147.055441, 134.516661, 123.047008, 112.555323, 102.958219, 94.179417, 86.149147, 78.803582, 
-    72.084342, 65.938023, 60.315774, 55.172909, 50.468554, 46.165319, 42.229003, 38.628319, 
-    35.334649, 32.321817, 29.565876, 27.044922, 24.738918, 22.629538, 20.700015, 18.935015, 
-    17.320508, 15.843663, 14.492743, 13.257010, 12.126642, 11.092656, 10.146833, 9.281656, 
-    8.490250, 7.766323, 7.104122, 6.498385, 5.944296, 5.437451, 4.973823, 4.549727, 
-    4.161791, 3.806934, 3.482333, 3.185409, 2.913803, 2.665356, 2.438093, 2.230207, 
-    2.040047, 1.866101, 1.706987, 1.561439, 1.428302, 1.306517, 1.195116, 1.093214, 
-    1.000000, 0.914734, 0.836739, 0.765394, 0.700132, 0.640435, 0.585828, 0.535877, 
-    0.490185, 0.448389, 0.410157, 0.375184, 0.343194, 0.313931, 0.287164, 0.262679, 
-    0.240281, 0.219793, 0.201053, 0.183910, 0.168229, 0.153884, 0.140763, 0.128761, 
-    0.117782, 0.107739, 0.098553, 0.090150, 0.082463, 0.075432, 0.069000, 0.063117, 
-    0.057735, 0.052812, 0.048309, 0.044190, 0.040422, 0.036976, 0.033823, 0.030939, 
-    0.028301, 0.025888, 0.023680, 0.021661, 0.019814, 0.018125, 0.016579, 0.015166, 
-    0.013873, 0.012690, 0.011608, 0.010618, 0.009713, 0.008885, 0.008127, 0.007434, 
-    0.006800, 0.006220, 0.005690, 0.005205, 0.004761, 0.004355, 0.003984, 0.003644, 
-};
-
-FLOAT_T sc_eg_release_table[128] = 
-{
-    300.000000, 274.420300, 251.021671, 229.618141, 210.039597, 192.130431, 175.748302, 160.763006, 
-    147.055441, 134.516661, 123.047008, 112.555323, 102.958219, 94.179417, 86.149147, 78.803582, 
-    72.084342, 65.938023, 60.315774, 55.172909, 50.468554, 46.165319, 42.229003, 38.628319, 
-    35.334649, 32.321817, 29.565876, 27.044922, 24.738918, 22.629538, 20.700015, 18.935015, 
-    17.320508, 15.843663, 14.492743, 13.257010, 12.126642, 11.092656, 10.146833, 9.281656, 
-    8.490250, 7.766323, 7.104122, 6.498385, 5.944296, 5.437451, 4.973823, 4.549727, 
-    4.161791, 3.806934, 3.482333, 3.185409, 2.913803, 2.665356, 2.438093, 2.230207, 
-    2.040047, 1.866101, 1.706987, 1.561439, 1.428302, 1.306517, 1.195116, 1.093214, 
-    1.000000, 0.914734, 0.836739, 0.765394, 0.700132, 0.640435, 0.585828, 0.535877, 
-    0.490185, 0.448389, 0.410157, 0.375184, 0.343194, 0.313931, 0.287164, 0.262679, 
-    0.240281, 0.219793, 0.201053, 0.183910, 0.168229, 0.153884, 0.140763, 0.128761, 
-    0.117782, 0.107739, 0.098553, 0.090150, 0.082463, 0.075432, 0.069000, 0.063117, 
-    0.057735, 0.052812, 0.048309, 0.044190, 0.040422, 0.036976, 0.033823, 0.030939, 
-    0.028301, 0.025888, 0.023680, 0.021661, 0.019814, 0.018125, 0.016579, 0.015166, 
-    0.013873, 0.012690, 0.011608, 0.010618, 0.009713, 0.008885, 0.008127, 0.007434, 
-    0.006800, 0.006220, 0.005690, 0.005205, 0.004761, 0.004355, 0.003984, 0.003644, 
-};
-
-FLOAT_T sc_eg_attack_table[128] = 
-{
-    493.203275, 453.731153, 417.340610, 383.796149, 352.879932, 324.390480, 298.141466, 273.960593, 
-    251.688558, 231.178087, 212.293043, 194.907601, 178.905476, 164.179219, 150.629550, 138.164757, 
-    126.700122, 116.157404, 106.464347, 97.554237, 89.365479, 81.841218, 74.928977, 68.580327, 
+    81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 
+    81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 
+    81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 81.841218, 74.928977, 68.580327, 
     62.750584, 57.398521, 52.486110, 47.978275, 43.842671, 40.049475, 36.571192, 33.382477, 
     30.459975, 27.782161, 25.329207, 23.082845, 21.026252, 19.143935, 17.421629, 15.846202, 
     14.405568, 13.088604, 11.885077, 10.785570, 9.781425, 8.864676, 8.028000, 7.264663, 
@@ -1209,9 +1169,49 @@ FLOAT_T sc_eg_attack_table[128] =
     0.147761, 0.133387, 0.120513, 0.108967, 0.098600, 0.089282, 0.080897, 0.073346, 
     0.066540, 0.060399, 0.054854, 0.049845, 0.045315, 0.041217, 0.037506, 0.034144, 
     0.031097, 0.028333, 0.025826, 0.023549, 0.021480, 0.019601, 0.017892, 0.016337, 
-    0.014923, 0.013635, 0.012462, 0.011394, 0.010420, 0.009532, 0.008722, 0.007983, 
-    0.007309, 0.006693, 0.006131, 0.005617, 0.005148, 0.004719, 0.004326, 0.003968, 
-    0.003639, 0.003339, 0.003064, 0.002812, 0.002582, 0.002371, 0.002177, 0.002000, 
+    0.014923, 0.013635, 0.012462, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 
+    0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 
+    0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 0.011394, 
+};
+
+FLOAT_T sc_eg_release_table[128] = 
+{
+    27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 
+    27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 
+    27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 27.322002, 25.299110, 23.425992, 
+    21.691556, 20.085537, 18.598425, 17.221418, 15.946363, 14.765711, 13.672474, 12.660179, 
+    11.722833, 10.854887, 10.051203, 9.307023, 8.617941, 7.979878, 7.389056, 6.841978, 
+    6.335406, 5.866339, 5.432002, 5.029822, 4.657419, 4.312589, 3.993290, 3.697631, 
+    3.423862, 3.170363, 2.935633, 2.718282, 2.517023, 2.330665, 2.158106, 1.998322, 
+    1.850368, 1.713369, 1.586513, 1.469049, 1.360282, 1.259569, 1.166311, 1.079959, 
+    1.000000, 0.925961, 0.857404, 0.793923, 0.735141, 0.680712, 0.630313, 0.583645, 
+    0.540433, 0.500420, 0.463369, 0.429062, 0.397295, 0.367879, 0.340642, 0.315421, 
+    0.292068, 0.270443, 0.250420, 0.231879, 0.214711, 0.198814, 0.184094, 0.170464, 
+    0.157843, 0.146157, 0.135335, 0.125315, 0.116037, 0.107446, 0.099491, 0.092124, 
+    0.085304, 0.078988, 0.073140, 0.067724, 0.062710, 0.058067, 0.053768, 0.049787, 
+    0.046101, 0.042688, 0.039527, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 
+    0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 
+    0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 0.036601, 
+};
+
+FLOAT_T sc_eg_attack_table[128] = 
+{
+    82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 
+    82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 
+    82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 82.756924, 75.473398, 68.815182, 
+    62.729632, 57.168464, 52.087395, 47.445819, 43.206507, 39.335325, 35.800987, 32.574817, 
+    29.630534, 26.944060, 24.493331, 22.258137, 20.219967, 18.361866, 16.668311, 15.125088, 
+    13.719184, 12.438688, 11.272700, 10.211246, 9.245197, 8.366205, 7.566631, 6.839489, 
+    6.178391, 5.577493, 5.031451, 4.535378, 4.084805, 3.675641, 3.304143, 2.966879, 
+    2.660703, 2.382715, 2.130237, 1.900768, 1.691929, 1.501374, 1.326560, 1.163993, 
+    1.000000, 0.859112, 0.753830, 0.666057, 0.591041, 0.526103, 0.469431, 0.419689, 
+    0.375841, 0.337054, 0.302650, 0.272061, 0.244810, 0.220489, 0.198750, 0.179292, 
+    0.161854, 0.146210, 0.132159, 0.119529, 0.108164, 0.097931, 0.088710, 0.080394, 
+    0.072891, 0.066115, 0.059994, 0.054461, 0.049456, 0.044927, 0.040827, 0.037114, 
+    0.033749, 0.030699, 0.027932, 0.025422, 0.023145, 0.021077, 0.019199, 0.017492, 
+    0.015941, 0.014532, 0.013250, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 
+    0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 
+    0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 0.012084, 
 };
 
 FLOAT_T sb_vol_table[1024];
